Fix: replace preview-feature switch pattern matching with instanceof
L2 UC5/UC6 (banking-support-core/service) and L3 Stage 1
(meeting-scheduling-core) used pattern matching in switch statements,
which is still a preview feature under Java 17 -- plain javac/mvn
compile failed with "patterns in switch statements are a preview
feature and are disabled by default" exactly as documented in each
README's run instructions, with no --enable-preview flag mentioned.

Replaced with instanceof pattern matching (stable since Java 16),
functionally identical, now compiles and runs with zero special flags
on any Java 16+. Verified: banking-support-core-uc5 (14/14 tests),
banking-support-core-uc6 (14/14 + 14/14 RBAC tests), and
meeting-scheduling-core (18/18 tests) all pass after the fix.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RmA1Go2egXTzwtryHJe1rP